CO-1111 - fix alignment for top searches in CoPeople and OrgIdentities

--- a/app/webroot/css/comanage-responsive.css
+++ b/app/webroot/css/comanage-responsive.css
@@ -60,10 +60,10 @@
      min-width: 50px !important;
    }
   #coPeopleSearch .input {
-    width: 14.6%;
+    width: 12.6%;
   }
   #orgIdSearch .input {
-    width: 9.5%;
+    width: 8.5%;
   }
 }
 
@@ -92,13 +92,13 @@
   }
   #co_people .panel1,
   #co_people .panel2 {
-    width: 850px;
+    width: 910px;
   }
   #coPeopleSearch .input {
-    width: 16.7%;
+    width: 14.1%;
   }
   #orgIdSearch .input {
-    width: 10%;
+    width: 9.9%;
   }
 }
 
@@ -117,10 +117,10 @@
     width: 1150px;
   }
   #coPeopleSearch .input {
-    width: 17.4%;
+    width: 14.6%;
   }
   #orgIdSearch .input {
-    width: 11%;
+    width: 10.4%;
   }
 }
 
